Closed Bug 1084450 Opened 10 years ago Closed 9 years ago

Header/footer are missing

Categories

(Core :: Print Preview, defect)

35 Branch
x86_64
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla37
Tracking Status
firefox34 --- unaffected
firefox35 + wontfix
firefox36 + verified
firefox37 --- verified
firefox50 - ---
firefox51 - ---

People

(Reporter: alice0775, Assigned: bas.schouten)

References

Details

(Keywords: regression, Whiteboard: [bugday-20150325])

Attachments

(1 file)

This bug is for Print Preview only problem.

Steps To Reproduce:
1. Print Preview any web page. (Alt > File > Pint Preview)

Actual Results:
Header/footer are missing

Expected Results:
Header/footer should be printing out in accordance with setting of "Page setup"

Regression window(m-i)
Good:
https://hg.mozilla.org/integration/mozilla-inbound/rev/165c3fd176ec
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:35.0) Gecko/20100101 Firefox/35.0 ID:20141001112720
Bad:
https://hg.mozilla.org/integration/mozilla-inbound/rev/d954ed24e795
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:35.0) Gecko/20100101 Firefox/35.0 ID:20141001113823

Pushlog:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=165c3fd176ec&tochange=d954ed24e795

Suspect: Bug 902952

Graphics
--------

Adapter Description: ATI Radeon HD 4300/4500 Series
Adapter Drivers: aticfx64 aticfx64 aticfx32 aticfx32 atiumd64 atidxx64 atiumdag atidxx32 atiumdva atiumd6a atitmm64
Adapter RAM: 512
ClearType Parameters: Gamma: 2200 Pixel Structure: R ClearType Level: 50 Enhanced Contrast: 200
Device ID: 0x954f
Direct2D Enabled: true
DirectWrite Enabled: true (6.2.9200.16492)
Driver Date: 4-29-2013
Driver Version: 8.970.100.1100
GPU #2 Active: false
GPU Accelerated Windows: 1/1 Direct3D 11 (OMTC)
Subsys ID: 00000000
Vendor ID: 0x1002
WebGL Renderer: Google Inc. -- ANGLE (ATI Radeon HD 4300/4500 Series Direct3D9Ex vs_3_0 ps_3_0)
windowLayerManagerRemote: true
AzureCanvasBackend: direct2d
AzureContentBackend: direct2d 1.1
AzureFallbackCanvasBackend: cairo
AzureSkiaAccelerated: 0
Tracking this regression, Bas can you take a look?
Flags: needinfo?(bas)
Assignee: nobody → bas
Status: NEW → ASSIGNED
Flags: needinfo?(bas)
Bas - we're a couple weeks from shipping 35 - do you have any new info on this issue?  Since it's a new regression in 35 it would be great to have a low risk forward-fix or a straightforward backout.
Flags: needinfo?(bas)
I'll try to fix this before next week.
Flags: needinfo?(bas)
I have been looking into this, but it is quite a mysterious problem, I can't find any code-paths that would somehow be different in this area between Direct2D 1.0 and 1.1. I can however confirm that switching from 1.1 to 1.0 fixes this issue, I am continuing my investigation.
Thanks for the update Bas.  As we have no more betas left for Desktop 35, this will have to be a wontfix, hopefully we'll get a resolution for 36.
(In reply to Lukas Blakk [:lsblakk] use ?needinfo from comment #5)
> Thanks for the update Bas.  As we have no more betas left for Desktop 35,
> this will have to be a wontfix, hopefully we'll get a resolution for 36.

Fwiw, I have determined the cause, the fix is non-obvious though as it seems to be a bug in our printing/layout code. The header and footer are actually bugged with other backends as well, just in a different way that isn't very noticeable.
Comment on attachment 8543695 [details] [diff] [review]
Disable subpixel AA when requested in header/footer drawing code

Review of attachment 8543695 [details] [diff] [review]:
-----------------------------------------------------------------

The nsDisplayItem::TYPE_HEADER_FOOTER check in nsDisplayGeneric::GetComponentAlphaBounds should be removed too.

::: layout/generic/nsPageFrame.cpp
@@ +488,5 @@
> +  virtual ~nsDisplayHeaderFooter() {
> +    MOZ_COUNT_DTOR(nsDisplayHeaderFooter);
> +  }
> +#endif
> +  

Whitespace!
Attachment #8543695 - Flags: review?(matt.woodrow) → review+
https://hg.mozilla.org/mozilla-central/rev/95bf6a77e0c6
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
Bas, could you fill the uplift request for aurora? Thanks
Flags: needinfo?(bas)
Comment on attachment 8543695 [details] [diff] [review]
Disable subpixel AA when requested in header/footer drawing code

Approval Request Comment
[Feature/regressing bug #]: D2D 1.1
[User impact if declined]: Header/footer missing in print preview
[Describe test coverage new/current, TBPL]: Several days nightly coverage
[Risks and why]: Very low, minimal change
[String/UUID change made/needed]: None
Flags: needinfo?(bas)
Attachment #8543695 - Flags: approval-mozilla-aurora?
Attachment #8543695 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
QA Whiteboard: [good first verify]
OS: Windows 7 Ultimate 64bit

Reproduced the bug with Firefox Nightly 36.0a.1
Status: Header/footer is missing in Print preview of any webpage.

Also, Check with the latest version of 
Firefox Developer Edition 38.0a2(2015-03-24) 
Firefox Nightly 39.0a1 (2015-03-24)
Firefox Beta Version 37.0 beta 7
Status: Fixed; Header/footer works fine; Both are visible in print preview now.
As per Comment 13, Changing the Status as Verified :D
Status: RESOLVED → VERIFIED
QA Whiteboard: [good first verify] → [good first verify][bugday-20150325]
Whiteboard: [bugday-20150325]
[Tracking Requested - why for this release]:

[Tracking Requested - why for this release]:Bug Verified

The Header and footer are not missing in Firebox 51.ob12
Hi, please don't use the tracking flags in this way. 
This bug was fixed over a year ago, and doesn't need any attention.
You need to log in before you can comment on or make changes to this bug.