Bug 1084450 - Disable subpixelAA text when requested for header/footer drawing code. r=mattwoodrow, a=sledru